--- a/RumahSehat/src/main/resources/application.properties
+++ b/RumahSehat/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.sql.init.platform=mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #sesuaikan NAMA_DATABASE dengan nama database anda
-spring.datasource.url=jdbc:mysql://localhost:3306/ISI_DATABASE_LOKAL?useSSL=false&serverTimezone=Asia/Jakarta
+spring.datasource.url=jdbc:mysql://localhost:3306/rumahsehat?useSSL=false&serverTimezone=Asia/Jakarta
 
 #sesuaikan dengan NAMA dan PASSWORD mysql anda
 spring.datasource.username=root
@@ -13,7 +13,7 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #pembuatan database (create || create drop || validate || update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 server.port=8080
 
