--- a/RumahSehat/src/main/resources/application.properties
+++ b/RumahSehat/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.sql.init.platform=mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #sesuaikan NAMA_DATABASE dengan nama database anda
-spring.datasource.url=jdbc:mysql://localhost:3306/rumahsehat?useSSL=false&serverTimezone=Asia/Jakarta
+spring.datasource.url=jdbc:mysql://localhost:3306/rumahsehat?createDatabaseIfNotExist=true&amp;useSSL=false&serverTimezone=Asia/Jakarta
 
 #sesuaikan dengan NAMA dan PASSWORD mysql anda
 spring.datasource.username=root
@@ -18,3 +18,16 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 
 spring.main.allow-circular-references=true
+
+#nnti semua baris di bawah ini
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+security.ignored=true
+security.basic.enabled=false
+
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
