deployment ci/cd

--- a/RumahSehat/src/main/resources/application-dev.yml
+++ b/RumahSehat/src/main/resources/application-dev.yml
@@ -18,7 +18,7 @@ spring:
         format_sql: true
 
     # pembuatan database (create || create-drop || validate || update)
-    hibernate.ddl-auto: create-drop
+    hibernate.ddl-auto: create
 
     show-sql: true
 
