--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: '2'
 services:
   web:
-    build:
-      context: .
-    image: localhost:15000/denny/apap-001
+    image: apap-registry.cs.ui.ac.id/shabrina.taqiyya/apap-084
     restart: always
     ports:
       - "10084:8080"
