--- a/rumahsehat_flutter/pubspec.yaml
+++ b/rumahsehat_flutter/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^3.0.1
+  shared_preferences: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
