--- a/RumahSehat/src/main/resources/application-dev.yml
+++ b/RumahSehat/src/main/resources/application-dev.yml
@@ -9,14 +9,14 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
 
     # sesuaikan nama database anda dengan di bawah ini
-    url: jdbc:mysql://localhost:3306/rumahsehat?useSSL=false&serverTimezone=Asia/Jakarta
-    # url: jdbc:mysql://localhost:3306/apap_db?useSSL=false&serverTimezone=Asia/Jakarta
+    # url: jdbc:mysql://localhost:3306/rumahsehat?useSSL=false&serverTimezone=Asia/Jakarta
+    url: jdbc:mysql://localhost:3306/apap_db?useSSL=false&serverTimezone=Asia/Jakarta
 
     # sesuaikan dengan NAMA dan PASSWORD anda dengan username password di bawah ini
-    username: root
-    password: 
-    # username: apap_user
-    # password: password1234!
+    # username: root
+    # password: 
+    username: apap_user
+    password: password1234!
 
   jpa:
     properties:
@@ -25,8 +25,8 @@ spring:
         format_sql: true
 
     # pembuatan database (create || create-drop || validate || update)
-    hibernate.ddl-auto: update
-    # hibernate.ddl-auto: create
+    # hibernate.ddl-auto: update
+    hibernate.ddl-auto: create
 
     show-sql: true
 
