--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ workflow:
   rules:
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_BRANCH == 'deployment'
+    - if: $CI_COMMIT_BRANCH == 'main'
 
 before_script:
   - docker info
