--- a/RumahSehat/src/main/resources/application-dev.yml
+++ b/RumahSehat/src/main/resources/application-dev.yml
@@ -32,3 +32,9 @@ spring:
   web:
     resources:
       static-locations: file:src/main/resources/static/
+      
+  security:
+    jwt:
+      secret-key: kelompok84
+      # in milliseconds (5 mins)
+      expire-length: 300000
